// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Podcast Page A11y I can see the skip to content link 1`] = `"Vá para o conteúdo"`;

exports[`Canonical Podcast Page Analytics ATI tracking pixel excluding src 1`] = `
<img
  alt=""
  height="1px"
  style="position:absolute"
  width="1px"
/>
`;

exports[`Canonical Podcast Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/"`;

exports[`Canonical Podcast Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "33",
  },
  {
    "p": "portuguese.bbc_brasil.podcasts.programmes.p07r3r3t.page",
  },
  {
    "x1": "[urn:bbc:pips:p07r3r3t]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-portuguese]",
  },
  {
    "x4": "[pt-br]",
  },
  {
    "x7": "[player-episode]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Que%20História!%20-%20BBC%20News%20Brasil]",
  },
]
`;

exports[`Canonical Podcast Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Brasil",
  "url": "/portuguese",
}
`;

exports[`Canonical Podcast Page Footer Anchors should match text and url 2`] = `
{
  "text": "Por que você pode confiar na BBC",
  "url": "https://www.bbc.com/portuguese/institutional-50054434",
}
`;

exports[`Canonical Podcast Page Footer Anchors should match text and url 3`] = `
{
  "text": "Termos de Uso",
  "url": "https://www.bbc.com/portuguese/institutional-36202448",
}
`;

exports[`Canonical Podcast Page Footer Anchors should match text and url 4`] = `
{
  "text": "Sobre a BBC",
  "url": "https://www.bbc.com/portuguese/institutional-36202452",
}
`;

exports[`Canonical Podcast Page Footer Anchors should match text and url 5`] = `
{
  "text": "Política de privacidade",
  "url": "https://www.bbc.com/portuguese/institutional-36202454",
}
`;

exports[`Canonical Podcast Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Podcast Page Footer Anchors should match text and url 7`] = `
{
  "text": "Contate a BBC",
  "url": "https://www.bbc.co.uk/portuguese/send/u50853599",
}
`;

exports[`Canonical Podcast Page Footer Anchors should match text and url 8`] = `
{
  "text": "BBC News em outras línguas",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Podcast Page Footer Anchors should match text and url 9`] = `
{
  "text": "Leia sobre nossa política em relação a links externos.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Podcast Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/portuguese"`;

exports[`Canonical Podcast Page Footer Paragraphs should match text 1`] = `"© 2025 BBC. A BBC não se responsabiliza pelo conteúdo de sites externos. Leia sobre nossa política em relação a links externos."`;

exports[`Canonical Podcast Page Header I can see the branding 1`] = `"BBC News, Brasil"`;

exports[`Canonical Podcast Page Header Navigation link should match text and url 1`] = `
{
  "text": "Notícias",
  "url": "/portuguese",
}
`;

exports[`Canonical Podcast Page Header Navigation link should match text and url 2`] = `
{
  "text": "Brasil",
  "url": "/portuguese/topics/cz74k717pw5t",
}
`;

exports[`Canonical Podcast Page Header Navigation link should match text and url 3`] = `
{
  "text": "Internacional",
  "url": "/portuguese/topics/cmdm4ynm24kt",
}
`;

exports[`Canonical Podcast Page Header Navigation link should match text and url 4`] = `
{
  "text": "Economia",
  "url": "/portuguese/topics/cvjp2jr0k9rt",
}
`;

exports[`Canonical Podcast Page Header Navigation link should match text and url 5`] = `
{
  "text": "Saúde",
  "url": "/portuguese/topics/c340q430z4vt",
}
`;

exports[`Canonical Podcast Page Header Navigation link should match text and url 6`] = `
{
  "text": "Ciência",
  "url": "/portuguese/topics/cr50y580rjxt",
}
`;

exports[`Canonical Podcast Page Header Navigation link should match text and url 7`] = `
{
  "text": "Tecnologia",
  "url": "/portuguese/topics/c404v027pd4t",
}
`;

exports[`Canonical Podcast Page Header Navigation link should match text and url 8`] = `
{
  "text": "Vídeos",
  "url": "/portuguese/topics/c9y2j35dn2zt",
}
`;

exports[`Canonical Podcast Page Header Navigation link should match text and url 9`] = `
{
  "text": "Podcasts",
  "url": "/portuguese/topics/cx2ggnx4j72t",
}
`;

exports[`Canonical Podcast Page I can see the brand title 1`] = `"Que História!"`;

exports[`Canonical Podcast Page I can see the episode summary 1`] = `"Aos 16 anos, Eve Wiley descobriu que fora concebida com sêmen de doador anônimo. Mas anos depois, após doença de seu filho, fez descoberta chocante sobre sua identidade genética."`;

exports[`Canonical Podcast Page I can see the episode title 1`] = `"A mulher que teve três pais: 'Meu mundo caiu quando soube verdade sobre pai biológico'"`;

exports[`Canonical Podcast Page I can see the hero image 1`] = `"https://ichef.bbci.co.uk/images/ic/256x256/p0k13gnp.png.webp"`;

exports[`Canonical Podcast Page Main heading should match text 1`] = `"Que História!, A mulher que teve três pais: 'Meu mundo caiu quando soube verdade sobre pai biológico'"`;

exports[`Canonical Podcast Page Media Loader renders a valid container 1`] = `
<figure
  class="bbc-ucozvf"
  data-e2e="media-loader__container"
>
  <div
    class="bbc-1eq7znh"
    data-e2e="media-player"
  />
</figure>
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 1`] = `
{
  "text": "Áudio, Que História!, 'Como encontrei tesouro enterrado na 2ª Guerra com mapa desenhado a mão por meu pai',  Duration 21,30  Duration 21:3017 setembro 2024",
  "url": "/portuguese/podcasts/p07r3r3t/p0jdspsp",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 2`] = `
{
  "text": "Áudio, Que História!, A família que passou 38 dias perdida no Pacífico,  Duration 22,10  Duration 22:1010 setembro 2024",
  "url": "/portuguese/podcasts/p07r3r3t/p0jdsnk1",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 3`] = `
{
  "text": "Áudio, Que História!, 'Aos 11 anos convenci a polícia de que meu pai era o assassino de minha mãe',  Duration 23,54  Duration 23:543 setembro 2024",
  "url": "/portuguese/podcasts/p07r3r3t/p0jdsmk2",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 4`] = `
{
  "text": "Áudio, Que História!, 'Como descobri a chocante identidade secreta do meu noivo',  Duration 22,54  Duration 22:5427 agosto 2024",
  "url": "/portuguese/podcasts/p07r3r3t/p0jdsk9x",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 5`] = `
{
  "text": "Áudio, Que História!, A mulher que caiu de avião destruído por raio a 3 km de altura,  Duration 17,54  Duration 17:5413 agosto 2024",
  "url": "/portuguese/podcasts/p07r3r3t/p0jdsd64",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 6`] = `
{
  "text": "Áudio, Que História!, O 'roubo do século' desvendado graças a reclamação sobre lixo jogado em terreno,  Duration 24,06  Duration 24:066 agosto 2024",
  "url": "/portuguese/podcasts/p07r3r3t/p0jdschj",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 7`] = `
{
  "text": "Áudio, Que História!, O homem encontrado vivo em navio afundado,  Duration 20,44  Duration 20:4425 julho 2024",
  "url": "/portuguese/podcasts/p07r3r3t/p0jdsg17",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 8`] = `
{
  "text": "Áudio, Que História!, Vem aí a 3ª temporada do 'Que História!': ouça o trailer,  Duration 00,43  Duration 00:4323 julho 2024",
  "url": "/portuguese/podcasts/p07r3r3t/p0jd7041",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 9`] = `
{
  "text": "Áudio, Que História!, 'Descobri que meu cabeleireiro é meu irmão',  Duration 12,40  Duration 12:4017 junho 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09clshz",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 10`] = `
{
  "text": "Áudio, Que História!, O homem que passou 76 dias à deriva no Atlântico,  Duration 15,12  Duration 15:1210 junho 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09cls7w",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 11`] = `
{
  "text": "Áudio, Que História!, O caso dos passageiros sugados para fora de avião,  Duration 11,59  Duration 11:593 junho 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09clrrg",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 12`] = `
{
  "text": "Áudio, Que História!, O médico que virou pianista após ser atingido por um raio,  Duration 14,01  Duration 14:0127 maio 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09clrc9",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 13`] = `
{
  "text": "Áudio, Que História!, A jovem que passou 12 anos sem conseguir emitir um som,  Duration 15,11  Duration 15:1120 maio 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09clqpf",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 14`] = `
{
  "text": "Áudio, Que História!, A poção que criava 'zumbis' no Haiti,  Duration 15,06  Duration 15:0613 maio 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09clpjz",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 15`] = `
{
  "text": "Áudio, Que História!, A espontânea 'trégua' de Natal em plena frente de combates da Primeira Guerra,  Duration 12,12  Duration 12:126 maio 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09cl7zl",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 16`] = `
{
  "text": "Áudio, Que História!, O mergulhador que passou 30 minutos sem ar e escapou da morte,  Duration 15,48  Duration 15:4829 abril 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09cj16h",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 17`] = `
{
  "text": "Áudio, Que História!, Como Jorge Amado e Dorival Caymmi encantaram a URSS,  Duration 18,20  Duration 18:2022 abril 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09chv2t",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 18`] = `
{
  "text": "Áudio, Que História!, O pedido de SOS em decoração de Dia das Bruxas,  Duration 16,45  Duration 16:458 abril 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p099wpnb",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 19`] = `
{
  "text": "Áudio, Que História!, Segunda temporada vem aí: ouça o trailer,  Duration 00,49  Duration 00:4931 março 2021",
  "url": "/portuguese/podcasts/p07r3r3t/p09chbv1",
}
`;

exports[`Canonical Podcast Page Recent Episodes List items should match text and url 20`] = `
{
  "text": "Áudio, Que História!, 'A vida secreta de meu filho que só conheci quando ele morreu',  Duration 16,22  Duration 16:2212 março 2020",
  "url": "/portuguese/podcasts/p07r3r3t/p083x9gr",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/portuguese/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Podcast Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Podcast Page SEO Canonical link 1`] = `"http://localhost:7080/portuguese/podcasts/p07r3r3t"`;

exports[`Canonical Podcast Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Podcast Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Podcast Page SEO Heading level 1 1`] = `"Que História!, A mulher que teve três pais: 'Meu mundo caiu quando soube verdade sobre pai biológico'"`;

exports[`Canonical Podcast Page SEO Lang attribute 1`] = `"pt-br"`;

exports[`Canonical Podcast Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/include/articles/public/portuguese/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "pt-BR",
        "name": "Portuguese",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/portuguese/podcasts/p07r3r3t",
        "@type": "WebPage",
        "name": "A mulher que teve três pais: 'Meu mundo caiu quando soube verdade sobre pai biológico' - Que História! - News Brasil",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/include/articles/public/portuguese/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News Brasil",
        "publishingPrinciples": "https://www.bbc.com/portuguese/institutional-50054434",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/include/articles/public/portuguese/images/metadata/poster-1024x576.png",
      "url": "http://localhost:7080/portuguese/podcasts/p07r3r3t",
    },
    {
      "@type": "AudioObject",
      "description": "Ela descobriu que foras concebida com sêmen de doador e, depois, que não foi bem assim.",
      "duration": "PT20M40S",
      "name": "Que História!",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p0k13gnp.png",
      "uploadDate": "2024-09-25T00:00:00.000Z",
    },
  ],
}
`;

exports[`Canonical Podcast Page SEO OG description 1`] = `"Ela descobriu que foras concebida com sêmen de doador e, depois, que não foi bem assim."`;

exports[`Canonical Podcast Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p0k13gnp.png"`;

exports[`Canonical Podcast Page SEO OG image alt 1`] = `"BBC News Brasil"`;

exports[`Canonical Podcast Page SEO OG locale 1`] = `"pt-BR"`;

exports[`Canonical Podcast Page SEO OG site name 1`] = `"BBC News Brasil"`;

exports[`Canonical Podcast Page SEO OG title 1`] = `"A mulher que teve três pais: 'Meu mundo caiu quando soube verdade sobre pai biológico' - Que História! - News Brasil - BBC News Brasil"`;

exports[`Canonical Podcast Page SEO OG type 1`] = `"website"`;

exports[`Canonical Podcast Page SEO OG url 1`] = `"http://localhost:7080/portuguese/podcasts/p07r3r3t"`;

exports[`Canonical Podcast Page SEO Page title 1`] = `"A mulher que teve três pais: 'Meu mundo caiu quando soube verdade sobre pai biológico' - Que História! - News Brasil - BBC News Brasil"`;

exports[`Canonical Podcast Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Podcast Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Podcast Page SEO Twitter creator 1`] = `"@bbcbrasil"`;

exports[`Canonical Podcast Page SEO Twitter description 1`] = `"Ela descobriu que foras concebida com sêmen de doador e, depois, que não foi bem assim."`;

exports[`Canonical Podcast Page SEO Twitter image alt 1`] = `"BBC News Brasil"`;

exports[`Canonical Podcast Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p0k13gnp.png"`;

exports[`Canonical Podcast Page SEO Twitter site 1`] = `"@bbcbrasil"`;

exports[`Canonical Podcast Page SEO Twitter title 1`] = `"A mulher que teve três pais: 'Meu mundo caiu quando soube verdade sobre pai biológico' - Que História! - News Brasil - BBC News Brasil"`;

exports[`Canonical Podcast Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"Que História!, A mulher que teve três pais: 'Meu mundo caiu quando soube verdade sobre pai biológico'"`;
